<resources>

    <string name="app_name">Museum Access</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Museum Access</string>
    <string name="title_activity_exposiciones">Exposiciones</string>
    <string name="title_activity_info_museo">Información del Museo</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_generar_pdf">GenerarPDFActivity</string>
    <string name="LogoAppDesc">Logo Knowledge Viewer</string>

    <color name="negro">#000000</color>
    <color name="azul_claro">#1f718f</color>
    <color name="naranja">#ff6600</color>
    <color name="naranja_obscuro">#993d00</color>
    <color name="blanco">#ffffff</color>

    <string name="editText_login_token_hint">Por favor ingrese su token</string>
    <string name="button_login_entrar">Entrar</string>
    <string name="button_login_salir">Salir</string>
    <string name="login_token_erroneo">Token inválido, por favor verifique y vuelva a intentarlo.</string>
    <string name="general_nombre_museo">Nombre del Museo</string>
    <string name="general_expo_del_dia">Exposiciones del día</string>
    <string name="general_expo_del_dia_corto">Expos del día</string>
    <string name="general_cerrar_sesion">Cerrar Sesión</string>
    <string name="general_regresar">Regresar</string>
    <string name="general_telefono">Teléfono: </string>
    <string name="general_fax">Fax: </string>
    <string name="general_email">Email: </string>
    <string name="general_horario">Horario: </string>
    <string name="general_resultados">Resultados</string>
    <string name="general_no_texto" />
    <string name="resultados_info1">Seleccione un resultado para ver su contenido multimedia</string>
    <string name="resultados_info2">Presione el encabezado de un columna para ocultarla</string>
    <string name="resultados_ordenar">Ordenar por:</string>
    <string name="resultados_elegir_atributo">Elegir atributo</string>
    <string name="resultados_PDF">PDF</string>
    <string name="resultados_formato">Formato de visualización</string>
    <string name="resultados_nueva_busqueda">Nueva Búsqueda</string>
    <string name="resultados_restaurar_atributos">Restaurar atributos filtrados</string>
    <string name="resultados_filtrar">Filtrar resultados</string>
    <string name="generarPDF_titulo">Generador de PDF</string>
    <string name="generarPDF_advertencia">ADVERTENCIA: Si se han seleccionado videos o audio estos no podrán ser incluidos en el PDF generado.</string>
    <string name="editText_generarPDF_nombre">Ingrese un nombre para el archivo PDF</string>
    <string name="editText_generarPDF_email">Ingrese un email al cual enviar el archivo PDF</string>
    <string name="plantilla_titulo">Seleccione un formato de visualización</string>
    <string name="especificos_elemento">Elemento: </string>
    <string name="button_home_info_museo">Info Museo</string>
    <string name="editText_home_palabra_clave_hint">Palabra Clave</string>
    <string name="button_home_marcar_todo">Marcar/Desmarcar todo</string>
    <string name="button_home_buscar">Buscar</string>
    <string name="button_formatos_elegir_formato">Elegir formato</string>
    <string name="formatos_descripcion_formato1">Formato de visualizacion 1</string>
    <string name="formatos_descripcion_formato2">Formato de visualizacion 2</string>
    <string name="formatos_descripcion_formato3">Formato de visualizacion 3</string>
    <string name="formatos_instrucciones">Seleccione uno de los formatos disponibles:</string>
    <string name="url_servidor">http://www.jsalas.codefactorycr.com/</string>
    <string name="carpeta_imagenes_expo">imagenes_expo</string>
    <string name="carpeta_audio">audio_articulos</string>
    <string name="carpeta_texto">texto_articulos</string>
    <string name="carpeta_video">video_articulos</string>
    <string name="carpeta_imagenes">imagenes_articulos</string>
    <string name="carpeta_thumbs">thumbs_articulos</string>
    <string name="nombre_php_info_museo">info.php</string>
    <string name="nombre_php_expos">expos.php</string>
    <string name="nombre_php_imagenes_pdf">imagenes_pdf.php</string>
    <string name="nombre_php_textos_pdf">textos_pdf.php</string>
    <string name="nombre_php_descripcion_pdf">descripciones_pdf.php</string>
    <string name="nombre_php_resultados_palabra_clave_y_categorias">resultados1.php</string>
    <string name="nombre_php_resultados_palabra_clave">resultados2.php</string>
    <string name="nombre_php_resultados_categorias">resultados3.php</string>
    <string name="nombre_php_categorias">categorias.php</string>
    <string name="nombre_php_categorias_parciales">categorias_parciales.php</string>
    <string name="nombre_php_obtener_videos">videos.php</string>
    <string name="nombre_php_obtener_audio">audio.php</string>
    <string name="nombre_php_obtener_imagenes">imagenes.php</string>
    <string name="nombre_php_obtener_textos">texto.php</string>
    <string name="title_activity_elegir_plantilla">ElegirPlantillaActivity</string>
    <string name="title_activity_resultados_especificos">ResultadosEspecificosActivity</string>
    <string name="EnvioDePDFEmail">Enviar PDF a Correo</string>
    <string name="hintEmail">correo@domain</string>
    <string name="resultados_header_imagen">Imagen</string>
    <string name="resultados_header_descripcion">Descripción</string>
    <string name="advertencia_nombre_PDF">Por favor ingrese el nombre con el que desea guardar el archivo</string>
    <string name="advertencia_email">Por favor ingrese un email al cual enviar el archivo</string>
    <string name="title_activity_formatos">Formatos</string>
    <string name="title_activity_texto">TextoActivity</string>
    <string name="title_activity_imagenes">ImagenesActivity</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="headerRowAudio">Descripcion</string>
    <string name="advertencia_no_hay_videos">No se han encontrado videos para este artículo</string>
    <string name="advertencia_no_hay_audio">No se han encontrado archivos de audio para este artículo</string>
    <string name="advertencia_no_hay_textos">No se han encontrado documentos de texto para este artículo</string>
    <string name="advertencia_no_hay_resultados">No se han encontrado resultados para la búsqueda realizada</string>
    <string name="advertencia_no_hay_exposiciones">No existen exposiciones del día</string>
    <string name="advertencia_no_se_seleccionaron_categorias">En la búsqueda anterior no se seleccionaron categorías</string>
    <string name="advertencia_sdcard">No se puede acceder a la SDCard de dispositivo</string>
    <string name="titulo_dialogo_ayuda">Ayuda</string>
    <string name="mensaje_ayuda_home">Para obtener un conjunto de resultados deseados, ingrese una o varias palabras clave. Además, si desea puede seleccionar las categorías sobre las cuales se desea conocer. Posteriormente, mediante el boton Buscar se realiza la respectiva búsqueda. \n\nMediante el botón de información de museo se obtienen importantes datos acerca del mismo como lo es su horario. \n\nLas exposiciones del día permiten ver las presentaciones planteadas por el personal del museo.</string>
    <string name="mensaje_ayuda_expo">Las exposiciones del día son conjuntos de resultados preparados con antelación por parte de la administración del museo.\n\nEstas tienen un tópico específico y para acceder a cualquiera de ellas, simplemente seleccione cualquiera de las imagenes asociadas a una exposición.</string>
    <string name="mensaje_ayuda_PDF">Antes de generar el archivo PDF es necesario indicar un nombre para el mismo. \n\nSi se desea también se puede enviar el respectivo PDF por medio de un correo electrónico, ingresando previamente la dirección de correo a la cual se desea enviar el archivo.</string>
    <string name="mensaje_ayuda_resultados">Una vez desplegados los resultados de la consulta solicitada, se pueden observar estos de manera interactiva. Al seleccionar cualquiera de estos artículos se pasa a un menú de resultados específicos donde se muestran las imágenes, los videos, los archivos de texto y los sonidos relacionados a ese artículo específico. \n\nSi se desea guardar la información pertinente a los resultados provistos, mediante la opción de PDF se puede tanto definir el nombre del archivo que almacenará dicha información como enviarlo a un correo electrónico. \n\nEs posible seleccionar un subconjunto de resultados para ser almacenados en el PDF utilizando los checkbox provistos. \n\nSe puede cambiar el formato de visualización de los resultados mostrados en esta pantalla, para así elegir una forma mas cómoda para presentar los distintos resultados. \n\nLas exposiciones del día permiten ver las presentaciones planteadas por el personal del museo. \n\nSi se desea, se puede realizar una nueva consulta desde cero o filtrar a partir de los resultados que se están desplegando actualmente, para así obtener resultados mas específicos.</string>
    <string name="mensaje_ayuda_formatos">Para cambiar el formato de visualización de los resultados, seleccione el de preferencia y luego presione el "Elegir formato".</string>
    <string name="title_activity_reproduccion__a__v_">Media</string>
    <string name="title_activity_reproduccion_texto">ReproduccionTextoActivity</string>
    <string name="email_asunto">Información de artículos consultados</string>
    <string name="email_cuerpo">Adjunto encontrará el PDF con la información consultada.</string>
    <string name="title_activity_creditos_app">CreditosApp</string>
    
    <string name="Titulo1">Universidad de Costa Rica\nEscuela de Ciencias de la Computación e Informática</string>
	<string name="Titulo2">Museum Access</string>
	<string name="Titulo3">Desarrolladores:</string>
	<string name="Titulo4">Rebeca Carranza \nCarolina Marín \nJorge Salas \nDavid Salas</string>
	<string name="correos">rbk.carranza@gmail.com \ncaro.marinc@gmail.com \njorgelsalas@gmail.com \nsalalleta@gmail.com</string>
	<string name="Titulo5">Profesor Guía:</string>
	<string name="Titulo6">Javier Vásquez Morera</string>
	<string name="Titulo7">2013</string>
	<string name="button_creditos">Créditos</string>
	
	<string name="notificacion_titulo">Notificación</string>
	<string name="notificacion_contenido">El archivo PDF se está generando, cuando se encuentre listo el mismo será guardado en la unidad SDCard del dispositivo.\n\nSi seleccionó la opción de enviar el PDF por correo, cuando el archivo esté listo se proveerá la respectiva funcionalidad para enviar el correo electrónico</string>
	

</resources>