<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro" >

    <ImageView
        android:id="@+id/info_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/LogoAppDesc"
        android:src="@drawable/logo2" />

    <TextView
        android:id="@+id/info_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/azul_claro"
        android:textSize="@dimen/others_appname_size"
        tools:context=".InfoMuseoActivity" />

    <TextView
        android:id="@+id/info_nombre_museo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/general_nombre_museo"
        android:textColor="@color/naranja"
        android:textSize="@dimen/general_header2" />

    <Button
        android:id="@+id/button_info_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/info_app_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/general_cerrar_sesion" />

    <TextView
        android:id="@+id/info_telefono_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_nombre_museo"
        android:layout_marginTop="40dp"
        android:layout_toLeftOf="@+id/info_app_name"
        android:text="@string/general_telefono" 
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />

    <TextView
        android:id="@+id/info_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_telefono_label"
        android:layout_alignBottom="@+id/info_telefono_label"
        android:layout_alignLeft="@+id/info_nombre_museo"
        android:text="@string/general_telefono"
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />
    
    <TextView
        android:id="@+id/info_fax_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_nombre_museo"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@+id/info_app_name"
        android:text="@string/general_fax" 
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />

    <TextView
        android:id="@+id/info_fax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_fax_label"
        android:layout_alignBottom="@+id/info_fax_label"
        android:layout_alignLeft="@+id/info_nombre_museo"
        android:text="@string/general_fax"
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />
    
    <TextView
        android:id="@+id/info_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_nombre_museo"
        android:layout_marginTop="120dp"
        android:layout_toLeftOf="@+id/info_app_name"
        android:text="@string/general_email" 
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />

    <TextView
        android:id="@+id/info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_email_label"
        android:layout_alignBottom="@+id/info_email_label"
        android:layout_alignLeft="@+id/info_nombre_museo"
        android:text="@string/general_email"
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />
    
    <TextView
        android:id="@+id/info_horario_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_nombre_museo"
        android:layout_marginTop="160dp"
        android:layout_toLeftOf="@+id/info_app_name"
        android:text="@string/general_horario" 
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />

    <TextView
        android:id="@+id/info_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_horario_label"
        android:layout_alignBottom="@+id/info_horario_label"
        android:layout_alignLeft="@+id/info_nombre_museo"
        android:maxWidth="350dp"
        android:text="@string/general_horario"
        android:textColor="@color/blanco"
        android:textSize="@dimen/general_header3" />

</RelativeLayout>
